added contacts, formitems, start of refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,4 @@
 
 <button type="text" (click)="sideBarVisible = !sideBarVisible" pButton icon="pi pi-plus" label="Show"></button>
 <button type="text" (click)="this.createDummyData()" pButton icon="pi pi-plus" label="Create dummy data"></button>
+<button type="text" (click)="this.clear()" pButton icon="fa fa-trash" label="Clear"></button>
