--- a/src/app/document/add-document/add-document.component.html
+++ b/src/app/document/add-document/add-document.component.html
@@ -13,19 +13,8 @@
       <p-message severity="error" text="Name is required" *ngIf="!form.controls['name'].valid&&form.controls['name'].dirty"></p-message>
     </div>
   </div>
-  <div class="p-grid">
-    <div class="p-col FloatLabelInput">
-      <app-tag-input label="Tags" [parentFormControl]="tagsControl" [originalTags]="tagsControl.value"></app-tag-input>
-    </div>
-  </div>
-  <div class="p-grid">
-    <div class="p-col FloatLabelInput">
-      <app-repository-selector label="Repository" [parentFormControl]="form.get('repository')"></app-repository-selector>
-    </div>
-    <div class="p-col">
-      <p-message severity="error" text="Repository is required" *ngIf="!form.controls['repository'].valid&&form.controls['repository'].dirty"></p-message>
-    </div>
-  </div>
+  <app-tag-input-form-item formControlName="tags"></app-tag-input-form-item>
+  <app-repository-input formControlName="repository"></app-repository-input>
   <div class="p-grid">
     <div class="p-col">
       <app-markdown-editor [parentFormControl]="contentControl"></app-markdown-editor>
