--- a/src/app/document/idnadrev-file-filter/idnadrev-file-filter.component.html
+++ b/src/app/document/idnadrev-file-filter/idnadrev-file-filter.component.html
@@ -7,7 +7,7 @@
        </span>
     </div>
     <div class="p-col">
-      <app-tag-input label="Search for tags" [parentFormControl]="form.get('tags')" ></app-tag-input>
+      <app-tag-input label="Search for tags" formControlName="tags"></app-tag-input>
     </div>
     <div class="p-col">
       <span class="ui-float-label">
