--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -17,6 +17,10 @@
     <fa-icon [icon]="docsIcon" class="fa-3x"></fa-icon>
     <br/>
   </a>
+  <a routerLink="/contact" routerLinkActive="active" class="NavLink" pTooltip="Contacts">
+    <fa-icon [icon]="usersIcon" class="fa-3x"></fa-icon>
+    <br/>
+  </a>
   <a routerLink="/repo" routerLinkActive="active" class="NavLink" pTooltip="Repositories">
     <fa-icon [icon]="reposIcon" class="fa-3x"></fa-icon>
     <br/>
