--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,38 @@ body {
 .RightAligned {
     text-align: right;
 }
+.CenterAligned {
+    text-align: center;
+}
+
+.ks-grid {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+}
+
+.ks-spacer {
+    flex-grow: 0;
+    flex-basis: 20%;
+}
+
+.ks-col {
+    flex-grow: 0;
+    padding-right: 1em;
+}
+
+.ks-item {
+    flex-grow: 1;
+}
+
+.ks-gutter {
+    flex-basis: 1em;
+}
+
+@media only screen and (max-width: 768px) {
+    .ks-spacer {
+        flex-grow: 0;
+        flex-basis: 0px;
+    }
+
+}
