--- a/src/app/task/add-task/add-task.component.html
+++ b/src/app/task/add-task/add-task.component.html
@@ -1,5 +1,5 @@
-<h1>Add task</h1>
-
+<app-page-title title="Add task">
+</app-page-title>
 
 <p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
