--- a/src/app/thought/add-thought/add-thought.component.html
+++ b/src/app/thought/add-thought/add-thought.component.html
@@ -1,4 +1,6 @@
-<h1>Add thought</h1>
+<app-page-title title="Add thought">
+</app-page-title>
+
 
 <p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
