--- a/src/app/contact/contact-overview/contact-overview.component.html
+++ b/src/app/contact/contact-overview/contact-overview.component.html
@@ -1,11 +1,7 @@
-<div class="p-grid">
-  <div class="p-col">
-    <h1>Contacts</h1>
-  </div>
-  <div class="p-col-fixed" style="width: 7em">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="addContact()"></button>
-  </div>
-</div>
+<app-page-title title="Contacts">
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em" (click)="addContact()"></button>
+</app-page-title>
+
 
 <div class="p-grid">
   <div class="p-col">
