--- a/src/app/document/add-document/add-document.component.html
+++ b/src/app/document/add-document/add-document.component.html
@@ -1,4 +1,6 @@
-<h1>Add document</h1>
+<app-page-title title="Add document">
+</app-page-title>
+
 
 <p-blockUI [blocked]="creating"></p-blockUI>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
