--- a/src/app/document/document-overview/document-overview.component.html
+++ b/src/app/document/document-overview/document-overview.component.html
@@ -1,11 +1,7 @@
-<div class="p-grid">
-  <div class="p-col">
-    <h1>Documents</h1>
-  </div>
-  <div class="p-col-fixed" style="width: 7em">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new document" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addDoc()"></button>
-  </div>
-</div>
+<app-page-title title="Documents">
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new document" style="width: 5em; height: 2.5em" (click)="this.addDoc()"></button>
+</app-page-title>
+
 
 <div class="p-grid">
   <div class="p-col">
