--- a/src/app/task/task-overview/task-overview.component.html
+++ b/src/app/task/task-overview/task-overview.component.html
@@ -1,11 +1,6 @@
-<div class="p-grid">
-  <div class="p-col">
-    <h1>Tasks</h1>
-  </div>
-  <div class="p-col-fixed" style="width: 7em">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new task" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addTask()"></button>
-  </div>
-</div>
+<app-page-title title="Tasks">
+  <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new task" style="width: 5em; height: 2.5em" (click)="this.addTask()"></button>
+</app-page-title>
 
 <div class="p-grid">
   <div class="p-col">
@@ -37,7 +32,7 @@
           <td (click)="this.showPreview(rowData)">
             {{rowData.repository | repositoryName}}
           </td>
-          <td  (click)="this.showPreview(rowData)">
+          <td (click)="this.showPreview(rowData)">
             {{rowData.details.state}}
           </td>
           <td>
