--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -1,11 +1,6 @@
-<div class="p-grid">
-  <div class="p-col">
-    <h1>Thoughts</h1>
-  </div>
-  <div class="p-col-fixed" style="width: 7em">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em; margin-top: 27px" (click)="this.addThought()"></button>
-  </div>
-</div>
+<app-page-title title="Thoughts">
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em" (click)="this.addThought()"></button>
+</app-page-title>
 
 
 <p-dialog
