--- a/src/app/contact/view-contact/view-contact.component.html
+++ b/src/app/contact/view-contact/view-contact.component.html
@@ -1,4 +1,4 @@
-<app-page-title [title]="contactToShow?.name" ]>
+<app-page-title title="{{contactToShow?.name}}">
 </app-page-title>
 
 <div *ngIf="contactToShow">
