some more adjustments to mobile view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 
 <button type="text" (click)="this.createDummyData()" pButton icon="pi pi-plus" label="Create dummy data"></button>
 <button type="text" (click)="this.clear()" pButton icon="fa fa-trash" label="Clear"></button>
+<h3>{{display.size}}</h3>
