--- a/src/app/thought/thought-filter/thought-filter.component.html
+++ b/src/app/thought/thought-filter/thought-filter.component.html
@@ -1,21 +1,21 @@
 <form [formGroup]="form">
-  <div class="p-grid">
-    <div class="p-col">
+  <div class="ks-grid">
+    <div class="ks-col">
       <span class="ui-float-label">
-         <input id="searchName" type="text" pInputText formControlName="name"/>
+         <input id="searchName" type="text" pInputText formControlName="name" (keyup.esc)="form.patchValue({'name':undefined})"/>
          <label for="searchName">Search for name</label>
        </span>
     </div>
-    <div class="p-col">
+    <div class="ks-col">
       <app-tag-input label="Search for tags" formControlName="tags"></app-tag-input>
     </div>
-    <div class="p-col">
+    <div class="ks-col">
       <span class="ui-float-label">
-        <input id="searchContent" type="text" pInputText formControlName="content"/>
+        <input id="searchContent" type="text" pInputText formControlName="content" (keyup.esc)="form.patchValue({'content':undefined})"/>
         <label for="searchContent">Search for content</label>
        </span>
     </div>
-    <div class="p-col">
+    <div class="ks-col">
       <button pButton type="button" icon="fa fa-times-circle" (click)="onReset()"></button>
     </div>
   </div>
