--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -19,17 +19,17 @@
     <p-table [value]="thoughts" [rowHover]="true">
       <ng-template pTemplate="header">
         <tr>
-          <th>Created</th>
+          <th *ngIf="display.md">Created</th>
           <th>Name</th>
-          <th>Repository</th>
+          <th *ngIf="display.md">Repository</th>
           <th>Action</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-thought>
         <tr (mouseover)="this.showPreview(thought)">
-          <td>{{thought.updated | date: "short"}}</td>
-          <td>{{thought.name}}</td>
-          <td>{{thought.repository | repositoryName}}</td>
+          <td *ngIf="display.md" (click)="this.showView(thought)">{{thought.updated | date: "short"}}</td>
+          <td (click)="this.showView(thought)">{{thought.name}}</td>
+          <td *ngIf="display.md" (click)="this.showView(thought)">{{thought.repository | repositoryName}}</td>
           <td>
             <div class="p-grid">
               <div class="p-col ActionButton">
@@ -53,7 +53,7 @@
       </ng-template>
     </p-table>
   </div>
-  <div class="p-col PaddingTop">
+  <div class="p-col PaddingTop" *ngIf="display.xxl">
     <app-thought-preview *ngIf="selectedThought" [thought]="selectedThought" (onEdit)="edit()" (onDelete)="this.delete($event)" (onDocument)="this.thoughtToDoc()" (onTask)="this.thoughtToTask()" (onPostpone)="showPostponeDialog=true"></app-thought-preview>
   </div>
 </div>
