--- a/src/app/thought/thought-preview/thought-preview.component.html
+++ b/src/app/thought/thought-preview/thought-preview.component.html
@@ -14,22 +14,6 @@
   </p-header>
   <app-markdown-viewer [markdown]="thought.content"></app-markdown-viewer>
   <p-footer>
-    <div class="ks-grid">
-      <div class="ks-col">
-        <button pButton type="button" icon="fa fa-edit" label="Edit" (click)="this.onEdit.emit()"></button>
-      </div>
-      <div class="ks-col">
-        <button pButton type="button" icon="fa fa-clipboard-list" label="Task" class="ui-button-success" (click)="this.onTask.emit()"></button>
-      </div>
-      <div class="ks-col">
-        <button pButton type="button" icon="fa fa-book" label="Document" class="ui-button-info" (click)="this.onDocument.emit()"></button>
-      </div>
-      <div class="ks-col">
-        <button pButton type="button" icon="fa fa-hourglass-start" label="Postpone" class="ui-button-secondary" (click)="this.onPostpone.emit()"></button>
-      </div>
-      <div class="ks-col">
-        <button pButton type="button" icon="fa fa-trash" label="Delete" class="ui-button-danger" (click)="this.onDelete.emit()"></button>
-      </div>
-    </div>
+    <app-thought-buttons [callback]="noop" [thought]="thought" [showLabels]="true"></app-thought-buttons>
   </p-footer>
 </p-card>
